Added World texts (title and failed) fixed health bar

--- a/UnityProject/Beat_Block_Generator/Assets/StreamingAssets/TemplateResourcepack/SONG_AUTHOR - SONG_NAME/assets/minecraft/lang/en_us.json
+++ b/UnityProject/Beat_Block_Generator/Assets/StreamingAssets/TemplateResourcepack/SONG_AUTHOR - SONG_NAME/assets/minecraft/lang/en_us.json
@@ -25,5 +25,5 @@
     "block.minecraft.ice": "Red Wall",
     
     "item.minecraft.name_tag": "Blue Saber",
-    "item.minecraft.spectral_arrow": "Stop Game"
+    "item.minecraft.spectral_arrow": "Main Menu"
 }
